--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "^8.0.17",
     "@types/react": "^15.6.0",
     "@types/react-dom": "^15.5.1",
+    "rc-calendar": "^9.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-polymer-layout": "^3.2.5"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
