--- a/view/package.json
+++ b/view/package.json
@@ -2,8 +2,8 @@
   "name": "bad-time",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
-    "@types/jest": "^20.0.5",
     "@types/node": "^8.0.17",
     "@types/react": "^15.6.0",
     "@types/react-dom": "^15.5.1",
@@ -11,7 +11,8 @@
     "rc-calendar": "^9.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-polymer-layout": "^3.2.5"
+    "react-polymer-layout": "^3.2.5",
+    "xhr": "^2.4.0"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
