--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
     "server": "node dist/index.js"
   },
   "dependencies": {
+    "@types/body-parser": "^1.16.4",
     "@types/express": "^4.0.36",
-    "express": "^4.15.3"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "moment": "^2.18.1"
   }
 }
