--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,10 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
-        "noImplicitAny": true,
         "moduleResolution": "node",
         "outDir": "dist",
         "baseUrl": ".",
+        "noUnusedLocals": true,
         "paths": {
             "*": [
                 "node_modules/*"
